GameController completato, alcuni commenti sospesi per via della mancanza della rete/view e dubbi vari